=== 0.0.3
 * Added rdoc documentations.

=== 0.0.2.dev Tue Oct 26

 * Numerous fixes and improvements to the CisoCommon#ping() method
 * Added Junos#ping() method

=== 0.0.1.dev  Mon Oct 25

 * Initial release.

   While this is still work in progress and buggy, it already allows to:

    + login to a Cisco router running IOS or IOS-XR or a Juniper router running Junos.
    + push configuration using #config() method
    + pull states using #show() method
    + check connectivity state using #ping() (not yet implemented for J class)
   
   Provides following: 

    Classes:
      Expect4r::Ios
      Expect4r::Iox
      Expect4r::J

    Class methods:
      new
      new_ssh
      new_telnet

    Instance methods:
      login
      logout
      config
      show
      shell
      exec
      in?
      ping