@@ -1,5 +1,8 @@
 === 0.0.3
+
  * Added rdoc documentations.
+ * login by proxy, i.e. 
+    j.login :by_proxy => (Ios.new_telnet 'commserver', 'lab', 'lab')
 
 === 0.0.2.dev Tue Oct 26
 
